166816212-feature(user, article, comment): comment on articles - add comment role migration - add comment controller - add comments route - add validation - add tests - add documentation [Delivers #166816212]
